--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,13 +5,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
-    <string name="tgl_recorder_start">Record</string>
-    <string name="tgl_recorder_pause">Pause</string>
+    <string name="btn_recorder_start">Record</string>
+    <string name="btn_recorder_pause">Pause</string>
     <string name="btn_recorder_stop">Stop</string>
     <string name="btn_recorder_cancel">Cancel</string>
     
-    <string name="tgl_player_play">Play</string>
-    <string name="tgl_player_pause">Pause</string>
+    <string name="btn_player_play">Play</string>
+    <string name="btn_player_pause">Pause</string>
     <string name="btn_player_stop">Stop</string>
     
     
