--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="ph_name">name</string>
     <string name="ph_date">date</string>
     <string name="ph_duration">duration</string>
+    <string name="ph_description">description</string>
     
     <!-- messages -->
     <string name="message_authentication_failed">Authentication failed</string>
