--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="option_menu_list">Recording list</string>
     <string name="option_menu_exit">Exit</string>
     <string name="option_menu_recorder">Recorder</string>
-    <string name="option_menu_search">Search</string>
-    <string name="option_menu_import">Import audio files</string>
+    <string name="option_menu_import_local">Import local files</string>
+    <string name="option_menu_import_cloud">Import online files</string>
     
     <!-- login activity -->
     <string name="btn_login">Log in</string>
@@ -46,7 +46,7 @@
     <string name="ph_date">date</string>
     <string name="ph_duration">duration</string>
     <string name="ph_description">description</string>
-     <string name="search">Search...</string>
+    <string name="search">Search...</string>
     
     <!-- messages -->
     <string name="message_authentication_failed">Authentication failed</string>
