Autoupload of recorded files if there's an internet connection

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="message_authentication_failed">Authentication failed</string>
     <string name="message_no_internet">No internet connectivity</string>
     <string name="message_saving">Saving, please wait</string>
+    <string name="message_not_uploaded">Could not upload to cloud. Please check your internet connectivity</string>
 
 </resources>
