--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -54,6 +54,7 @@
     <string name="message_not_on_cloud">Fișierul nu există pe cloud</string>
     <string name="message_name_validation">Caractere invalide în nume. Doar litere, numere, spații și _ &#8211; permise </string>
     <string name="message_recording_canceled">Înregistrarea a fost anulată</string>
+    <string name="message_no_internet_checking">Nu putem verifica existanta fișierelor de pe cloud. Nu exista conexiune la internet</string>
     
       <!-- about activity -->
     <string name="about_title1">
