--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="message_not_on_cloud">The file does not exist on the cloud</string>
     <string name="message_name_validation">Invalid characters in name field. Only letters, numbers, spaces and _ &#8211; allowed </string>
     <string name="message_recording_canceled">Recording has been canceled</string>
+    <string name="message_no_internet_checking">Cannot get status for online files. Unable to connect to the internet</string>
     
       <!-- about activity -->
     <string name="about_title1">
