--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -54,8 +54,8 @@
     <string name="message_not_on_cloud">Fișierul nu există pe cloud</string>
     <string name="message_name_validation">Caractere invalide în nume. Doar litere, numere, spații și _ &#8211; permise </string>
     <string name="message_recording_canceled">Înregistrarea a fost anulată</string>
-    <string name="message_no_internet_checking">Nu putem verifica existanta fișierelor de pe cloud. Nu exista conexiune la internet</string>
-    <string name="message_no_space_avaible">Aplicatia are nevoie de cel putin 10MB liberi pe SD intern al telefonului. Va rugam sa eliberati memorie</string>
+    <string name="message_no_internet_checking">Nu s-a putut verifica existența fișierelor pe cloud. Nu există conexiune la internet</string>
+    <string name="message_no_space_avaible">Aplicația are nevoie de cel putin 10MB de memorie liberi. Vă rugam să eliberați memorie</string>
      
       <!-- about activity -->
     <string name="about_title1">
