--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -17,8 +17,7 @@
     <string name="option_menu_list">Listă înregistrări</string>
     <string name="option_menu_exit">Ieșire</string>
     <string name="option_menu_recorder">Înregistrator</string>
-    <string name="option_menu_import_local">Importă fișiere locale</string>
-    <string name="option_menu_import_cloud">Importă fișiere online</string>
+    <string name="option_menu_import_files">Importă fișiere audio</string>
     <string name="option_menu_about">Despre</string>
     <string name="option_menu_check_files">Verifică starea fișierelor</string>
 
