File checking on upload/download

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="message_recording_canceled">Recording has been canceled</string>
     <string name="message_no_internet_checking">Cannot get status for online files. Unable to connect to the internet</string>
     <string name="message_no_space_avaible">The application needs at least 10MB of internal storage to run. Please free up space.</string>
+   	<string name="message_cloud_not_imported">Could not import cloud files. Please check your internet connectivity</string>
     
       <!-- about activity -->
     <string name="about_title1">
