--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -55,6 +55,7 @@
     <string name="message_recording_canceled">Înregistrarea a fost anulată</string>
     <string name="message_no_internet_checking">Nu s-a putut verifica existența fișierelor pe cloud. Nu există conexiune la internet</string>
     <string name="message_no_space_avaible">Aplicația are nevoie de cel putin 10MB de memorie liberi. Vă rugam să eliberați memorie</string>
+    <string name="message_cloud_not_imported">Nu s-a putut importa de pe cloud. Verificați conexiunea la internet</string>
      
       <!-- about activity -->
     <string name="about_title1">
