--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -44,7 +44,8 @@
     <!-- messages -->
     <string name="message_authentication_failed">Autentificare eșuată</string>
     <string name="message_no_internet">Nu există conexiune la internet</string>
-    <string name="message_saving">Se salvează, vă rog așteptați</string>
+    <string name="message_saving">Se salvează, vă rugăm așteptați</string>
+    <string name="message_recovering">Se restaurează ultima înregistrare, vă rugăm așteptați</string>
     <string name="message_not_uploaded">Nu s-a putut încărca pe cloud. Verificați conexiunea la internet</string>
     <string name="message_cloud_not_renamed">Nu s-a putut redenumi fișierul de pe cliud. Verificați conexiunea la internet</string>
     <string name="message_already_on_cloud">Fișierul există deja pe cloud</string>
