--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -45,6 +45,8 @@
     <string name="message_authentication_failed">Autentificare eșuată</string>
     <string name="message_no_internet">Nu există conexiune la internet</string>
     <string name="message_saving">Se salvează, vă rugăm așteptați</string>
+    <string name="message_uploading">Se încarcă, vă rugăm așteptați</string>
+    <string name="message_downloading">Se descarcă, vă rugăm așteptați</string>
     <string name="message_recovering">Se restaurează ultima înregistrare, vă rugăm așteptați</string>
     <string name="message_not_uploaded">Nu s-a putut încărca pe cloud. Verificați conexiunea la internet</string>
     <string name="message_cloud_not_renamed">Nu s-a putut redenumi fișierul de pe cliud. Verificați conexiunea la internet</string>
