--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -40,6 +40,11 @@
     <string name="ph_description">description</string>
     <string name="search">Caută&#8230;</string>
     
+    <!-- titles -->
+    <string name="title_saving">Se salvează...</string>
+    <string name="title_uploading">Se încarcă...</string>
+    <string name="title_downloading">Se descarcă...</string>
+    <string name="title_recovering">Se restaurează...</string>
         
     <!-- messages -->
     <string name="message_authentication_failed">Autentificare eșuată</string>
