--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_recordinglist">Listă înregistrări</string>
     <string name="title_editrecording">Modificare înregistrare</string>
     <string name="title_about">Despre</string>
+    <string name="title_settings">Setări</string>
 
     <!-- main activity -->
     <string name="tv_recorder_time">00:00</string>
@@ -20,6 +21,7 @@
     <string name="option_menu_import_files">Importă fișiere audio</string>
     <string name="option_menu_about">Despre</string>
     <string name="option_menu_check_files">Verifică starea fișierelor</string>
+    <string name="option_menu_settings">Setări</string>
 
     <!-- login activity -->
     <string name="btn_login">Logare</string>
@@ -39,6 +41,10 @@
     <string name="ph_duration">duration</string>
     <string name="ph_description">description</string>
     <string name="search">Caută&#8230;</string>
+    
+    <!-- settings activity -->
+    <string name="pref_title_auto_upload">Urcare automată</string>
+    <string name="pref_summary_auto_upload">Urcă înregistrările automat după salvare</string>
     
     <!-- titles -->
     <string name="title_saving">Se salvează&#8230;</string> <!-- &#8230; = ... -->
