--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -52,6 +52,8 @@
     <string name="title_downloading">Se descarcă&#8230;</string>
     <string name="title_recovering">Se restaurează&#8230;</string>
     <string name="title_deleting">Se șterge&#8230;</string>
+    <string name="title_checking_files">Se verifică fișierele&#8230;</string>
+    <string name="title_importing">Se importă&#8230;</string>
         
     <!-- messages -->
     <string name="message_authentication_failed">Autentificare eșuată</string>
@@ -61,6 +63,8 @@
     <string name="message_downloading">Se descarcă, vă rugăm așteptați</string>
     <string name="message_recovering">Se restaurează ultima înregistrare, vă rugăm așteptați</string>
     <string name="message_deleting">Se șterge, vă rugăm așteptați</string>
+    <string name="message_checking_files">Se verifică fișierele, vă rugăm așteptați</string>
+    <string name="message_importing">Se importă, vă rugăm așteptați</string>
     <string name="message_not_uploaded">Nu s-a putut încărca pe cloud. Verificați conexiunea la internet</string>
     <string name="message_cloud_not_renamed">Nu s-a putut redenumi fișierul de pe cliud. Verificați conexiunea la internet</string>
     <string name="message_already_on_cloud">Fișierul există deja pe cloud</string>
