--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
 
     <!-- main activity -->
     <string name="tv_recorder_time">00:00</string>
+    <string name="tv_recorder_separator">/</string>
 
     <!-- options menu -->
     <string name="option_menu_logout">Log out</string>
@@ -46,7 +47,7 @@
     <string name="pref_title_auto_upload">Auto upload</string>
     <string name="pref_summary_auto_upload">Upload recordings automatically after saving</string>
     
-    <!-- titles -->
+    <!-- dialogs -->
     <string name="title_saving">Saving&#8230;</string> <!-- &#8230; = ... -->
     <string name="title_uploading">Uploading&#8230;</string>
     <string name="title_downloading">Downloading&#8230;</string>
@@ -55,10 +56,6 @@
     <string name="title_checking_files">Checking files&#8230;</string>
     <string name="title_importing">Importing&#8230;</string>
     <string name="title_logging_in">Logging in&#8230;</string>
-        
-    <!-- messages -->
-    <string name="message_authentication_failed">Authentication failed</string>
-    <string name="message_no_internet">No internet connectivity</string>
     <string name="message_saving">Saving, please wait</string>
     <string name="message_uploading">Uploading, please wait</string>
     <string name="message_downloading">Downloading, please wait</string>
@@ -67,6 +64,10 @@
     <string name="message_checking_files">Checking files, please wait</string>
     <string name="message_importing">Importing, please wait</string>
     <string name="message_logging_in">Logging in, please wait</string>
+        
+    <!-- toasts -->
+    <string name="message_authentication_failed">Authentication failed</string>
+    <string name="message_no_internet">No internet connectivity</string>    
     <string name="message_not_uploaded">Could not upload to cloud. Please check your internet connectivity</string>
     <string name="message_cloud_not_renamed">Could not rename cloud file. Please check your internet connectivity</string>
     <string name="message_already_on_cloud">The file already exists on the cloud</string>
