--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -41,7 +41,7 @@
     <string name="ph_date">date</string>
     <string name="ph_duration">duration</string>
     <string name="ph_description">description</string>
-    <string name="search">Caută&#8230;</string>
+    <string name="hint_search">Caută&#8230;</string>
     
     <!-- settings activity -->
     <string name="pref_title_auto_upload">Urcare automată</string>
