--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,8 @@
     <!-- settings activity -->
     <string name="pref_title_auto_upload">Auto upload</string>
     <string name="pref_summary_auto_upload">Upload recordings automatically after saving</string>
+    <string name="pref_title_device_name">Use device name</string>
+    <string name="pref_summary_device_name">Use device name in the file name</string>
     
     <!-- dialogs -->
     <string name="title_saving">Saving&#8230;</string> <!-- &#8230; = ... -->
